# itmo_algorithms

./: README.md  pyproject.toml
task_1/: task_1.ipynb
task_2/: task_2.ipynb
task_3/: task_3.ipynb
task_4/: task_4.ipynb  wg22_xy.txt
task_5/: task_5.ipynb
task_6/: task_6.ipynb
task_7/: task_7.ipynb
task_7/Connected Components Report/: report.html
task_7/Degree Report/: report.html
task_7/Graph Density Report/: report.html
task_7/Graph Distance Report/: report.html
task_7/Modularity Report/: report.html
task_7/Weighted Degree Report/: report.html
task_8/: task_8.ipynb
