[tool.poetry]
name = "itmo_algorithms"
version = "0.1.0"
description = ""
authors = ["dmitrij <dimaprusskii@mail.ru>"]

[tool.poetry.dependencies]
python = "~3.8.5"
numpy = "^1.21.2"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
